--- a/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/WeatherOf/DayTableComponent.razor
+++ b/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/WeatherOf/DayTableComponent.razor
@@ -15,10 +15,10 @@
         {
             <tr>
                 <td>@day.Date.Split("/")[0]</td>
-                <td class="@day.CssBackgroundClass.AvgTemp">@day.AvgTemp</td>
-                <td class="@day.CssBackgroundClass.MinTemp">@day.MinTemp</td>
-                <td class="@day.CssBackgroundClass.MaxTemp">@day.MaxTemp</td>
-                <td class="@day.CssBackgroundClass.SunHour">@day.SunHour</td>
+                <td class="@day.CssBackgroundClass.AvgTemp">@day.AvgTemp°C</td>
+                <td class="@day.CssBackgroundClass.MinTemp">@day.MinTemp°C</td>
+                <td class="@day.CssBackgroundClass.MaxTemp">@day.MaxTemp°C</td>
+                <td class="@day.CssBackgroundClass.SunHour">@day.SunHour h</td>
             </tr>
         }
     </tbody>
