Added symbols like celsius

--- a/WeatherHistoryViewer.Web/Client/Shared/LegendaComponent.razor
+++ b/WeatherHistoryViewer.Web/Client/Shared/LegendaComponent.razor
@@ -9,14 +9,14 @@
     </div>
     <div class="color-range"></div>
     <div class="flex-container">
-            <p class=" text-left">
-                @Math.Round(MinValue,0)
-            </p>
+        <p class=" text-left">
+            @Math.Round(MinValue, 0)°C
+        </p>
             <p class=" text-center">
-                @Math.Round(AvgValue,0)
+                @Math.Round(AvgValue, 0)°C
             </p>
             <p class=" text-right">
-                @Math.Round(MaxValue,0)
+                @Math.Round(MaxValue, 0)°C
             </p>
     </div>
     <br />
