--- a/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/OverviewTableComponent.razor
+++ b/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/OverviewTableComponent.razor
@@ -17,14 +17,14 @@
         {
             <tr>
                 <th>@overview.LocationName</th>
-                <th class="@overview.CssBackgroundClass.AvgTemp">@overview.AvgTemp</th>
-                <th class="@overview.CssBackgroundClass.MaxTemp">@overview.MaxTemp</th>
+                <th class="@overview.CssBackgroundClass.AvgTemp">@overview.AvgTemp°C</th>
+                <th class="@overview.CssBackgroundClass.MaxTemp">@overview.MaxTemp°C</th>
                 <th>@overview.DateOfMaxTemp</th>
 
-                <th class="@overview.CssBackgroundClass.MinTemp">@overview.MinTemp</th>
+                <th class="@overview.CssBackgroundClass.MinTemp">@overview.MinTemp°C</th>
                 <th>@overview.DateOfMinTemp</th>
 
-                <th class="@overview.CssBackgroundClass.SunHour">@overview.SunHour</th>
+                <th class="@overview.CssBackgroundClass.SunHour">@overview.SunHour h</th>
             </tr>
         }
     </tbody>
