--- a/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/WeatherOf/YearsTableComponent.razor
+++ b/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/WeatherOf/YearsTableComponent.razor
@@ -17,12 +17,12 @@
         {
             <tr>
                 <th>@year.Year</th>
-                <th class="@year.CssBackgroundClass.AvgTemp">@year.AvgTemp</th>
-                <td class="@year.CssBackgroundClass.MaxTemp">@year.MaxTemp</td>
+                <th class="@year.CssBackgroundClass.AvgTemp">@year.AvgTemp°C</th>
+                <td class="@year.CssBackgroundClass.MaxTemp">@year.MaxTemp°C</td>
                 <td>@year.DateOfMaxTemp</td>
-                <td class="@year.CssBackgroundClass.MinTemp">@year.MinTemp</td>
+                <td class="@year.CssBackgroundClass.MinTemp">@year.MinTemp°C</td>
                 <td>@year.DateOfMinTemp</td>
-                <td class="@year.CssBackgroundClass.SunHour">@year.SunHour</td>
+                <td class="@year.CssBackgroundClass.SunHour">@year.SunHour h</td>
             </tr>
         }
     </tbody>
