--- a/WeatherHistoryViewer.Web/Client/Shared/NavMenu.razor
+++ b/WeatherHistoryViewer.Web/Client/Shared/NavMenu.razor
@@ -1,6 +1,4 @@
-﻿@using Microsoft.AspNetCore.Components.Forms;
-
-<div class="top-row pl-4 navbar navbar-dark">
+﻿<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">Weather History Viewer</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -46,4 +44,5 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
 }
