--- a/WeatherHistoryViewer.Web/Client/Pages/AddWeatherData.razor
+++ b/WeatherHistoryViewer.Web/Client/Pages/AddWeatherData.razor
@@ -1,7 +1,5 @@
 ﻿@page "/addWeatherData"
 @using WeatherHistoryViewer.Core.Models
-@using WeatherHistoryViewer.Services.Handlers
-@using System.ComponentModel.DataAnnotations
 @inject HttpClient Http
 @if (_locationNames == null)
 {
@@ -11,30 +9,37 @@
 }
 else
 {
-
-<div class="form-style">
-    <div class="form-style-heading">Add weather data</div>
-    @if (_formResponse.Location != null)
-    {
-        <p>
-            <b>Currently downloading data for @_formResponse.Location </b>
-        </p>
-    }
-    <EditForm Model="@_formResponse" OnValidSubmit="@HandleValidSubmit">
-        <DataAnnotationsValidator />
-        <ValidationSummary />
-        <label for="location"><span>Location <span class="required">*</span></span><input type="text" class="input-field" @bind-value="@_formResponse.Location" list="locationSearch" /></label>
-        <datalist id="locationSearch">
-            @foreach (var name in _locationNames)
-            {
-                <option>@name</option>
-            }
-        </datalist>
-        <label for="date"><span>Oldest date <span class="required">*</span></span><InputDate @bind-Value="_formResponse.OldestDate"></InputDate></label>
-        <label for="date"><span>Newest date <span class="required">*</span></span><InputDate @bind-Value="_formResponse.NewestDate"></InputDate></label>
-        <label><span> </span><input type="submit" value="Add" /></label>
-    </EditForm>
-</div>
+    <div class="form-style">
+        <div class="form-style-heading">Add weather data</div>
+        @if (_formResponse.Location != null)
+        {
+            <p>
+                <b>Currently downloading data for @_formResponse.Location </b>
+            </p>
+        }
+        <EditForm Model="@_formResponse" OnValidSubmit="@HandleValidSubmit">
+            <DataAnnotationsValidator/>
+            <ValidationSummary/>
+            <label for="location">
+                <span>Location <span class="required">*</span></span><input type="text" class="input-field" @bind-value="@_formResponse.Location" list="locationSearch"/>
+            </label>
+            <datalist id="locationSearch">
+                @foreach (var name in _locationNames)
+                {
+                    <option>@name</option>
+                }
+            </datalist>
+            <label for="date">
+                <span>Oldest date <span class="required">*</span></span><InputDate @bind-Value="_formResponse.OldestDate"></InputDate>
+            </label>
+            <label for="date">
+                <span>Newest date <span class="required">*</span></span><InputDate @bind-Value="_formResponse.NewestDate"></InputDate>
+            </label>
+            <label>
+                <span> </span><input type="submit" value="Add"/>
+            </label>
+        </EditForm>
+    </div>
 }
 
 @code {
@@ -51,7 +56,7 @@ else
 
     void HandleValidSubmit()
     {
-        Http.PostAsJsonAsync($"/api/addWeatherData",_formResponse);
+        Http.PostAsJsonAsync("/api/addWeatherData", _formResponse);
     }
 
 }
