--- a/WeatherHistoryViewer.Web/Client/Pages/WeatherOfDay.razor
+++ b/WeatherHistoryViewer.Web/Client/Pages/WeatherOfDay.razor
@@ -1,8 +1,7 @@
 ﻿@page "/weatherOfDay"
 @using WeatherHistoryViewer.Services.Helpers
-@using WeatherHistoryViewer.Core.Models.Weather
 @using WeatherHistoryViewer.Core.Models
-@using WeatherHistoryViewer.Services.Handlers
+@using WeatherHistoryViewer.Core.Models.Weather
 @using WeatherHistoryViewer.Core.ViewModels
 @using WeatherHistoryViewer.Web.Client.Shared.WeatherTables.WeatherOf
 @inject HttpClient Http
@@ -23,16 +22,22 @@ else
         <EditForm Model="@_formResponse" OnValidSubmit="@HandleValidSubmit">
             <DataAnnotationsValidator />
             <ValidationSummary />
-            <label for="location"><span>Location <span class="required">*</span></span><input type="text" class="input-field" @bind-value="@_formResponse.Location" list="locationSearch" /></label>
+            <label for="location">
+                <span>Location <span class="required">*</span></span><input type="text" class="input-field" @bind-value="@_formResponse.Location" list="locationSearch" />
+            </label>
             <datalist id="locationSearch">
                 @foreach (var name in _locationNames)
                 {
                     <option>@name</option>
                 }
             </datalist>
-            <label for="date"><span>Date <span class="required">*</span></span><InputDate @bind-Value="_formResponse.Date"></InputDate></label>
+            <label for="date">
+                <span>Date <span class="required">*</span></span><InputDate @bind-Value="_formResponse.Date"></InputDate>
+            </label>
 
-            <label><span> </span><input type="submit" value="Load" /></label>
+            <label>
+                <span> </span><input type="submit" value="Load" />
+            </label>
         </EditForm>
     </div>
 
@@ -66,4 +71,5 @@ else
         _weatherOfDay = weatherOfDayViewModel.HistoricalWeather;
         _weatherLegenda = weatherOfDayViewModel.WeatherLegenda;
     }
+
 }
