--- a/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/WeatherOf/DayTableComponent.razor
+++ b/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/WeatherOf/DayTableComponent.razor
@@ -1,30 +1,31 @@
 ﻿@using WeatherHistoryViewer.Core.Models.Weather
-
 <table class="table table-bordered" style="width: auto;">
     <thead>
-        <tr>
-            <th>Year</th>
-            <th>Avg temp</th>
-            <th>Min temp</th>
-            <th>Max temp</th>
-            <th>Sun hours</th>
-        </tr>
+    <tr>
+        <th>Year</th>
+        <th>Avg temp</th>
+        <th>Min temp</th>
+        <th>Max temp</th>
+        <th>Sun hours</th>
+    </tr>
     </thead>
     <tbody>
-        @foreach (var day in WeatherOfDay)
-        {
-            <tr>
-                <td>@day.Date.Split("/")[0]</td>
-                <td class="@day.CssBackgroundClass.AvgTemp">@day.AvgTemp°C</td>
-                <td class="@day.CssBackgroundClass.MinTemp">@day.MinTemp°C</td>
-                <td class="@day.CssBackgroundClass.MaxTemp">@day.MaxTemp°C</td>
-                <td class="@day.CssBackgroundClass.SunHour">@day.SunHour h</td>
-            </tr>
-        }
+    @foreach (var day in WeatherOfDay)
+    {
+        <tr>
+            <td>@day.Date</td>
+            <td class="@day.CssBackgroundClass.AvgTemp">@day.AvgTemp°C</td>
+            <td class="@day.CssBackgroundClass.MinTemp">@day.MinTemp°C</td>
+            <td class="@day.CssBackgroundClass.MaxTemp">@day.MaxTemp°C</td>
+            <td class="@day.CssBackgroundClass.SunHour">@day.SunHour h</td>
+        </tr>
+    }
     </tbody>
 </table>
 
 @code {
+
     [Parameter]
     public List<HistoricalWeather> WeatherOfDay { get; set; }
+
 }
